<resources>
    <string name="app_name">Bus Dublin</string>
    <string name="title_real_time">Real Time Information</string>

    <string name="title_stop">Stops</string>
    <string name="title_route">Routes</string>
    <string name="title_near">Near</string>
    <string name="title_favorite">Favourites</string>

    <string name="permission_title">Permission Required</string>
    <string name="permission_message">To continue, enable the location permission. You can change this at any time in Settings.</string>
    <string name="permission_after">After</string>
    <string name="permission_settings">Settings</string>
    <string name="location_warning">Location</string>
    <string name="location_continue">To continue, enable the location on your device.</string>

    <string name="title_no_connection">No connection</string>
    <string name="title_retry">Retry</string>
    <string name="error_message">An error has occurred. Please try again by clicking REFRESH</string>

    <string name="route_detail_change_direction">Chance direction</string>
    <string name="route_detail_change_map">Change to map</string>
    <string name="route_detail_change_list">Change to list</string>

    <string name="route_detail_size_stops">%s stops</string>
    <string name="route_detail_title">Route %s</string>
    <string name="route_detail_error">No route info available.</string>
    <string name="route_detail_no_items">No items</string>

    <string name="real_time_remove_favourite">Removed from Favourites</string>
    <string name="real_time_add_favourite">Saved in Favourites</string>
    <string name="real_time_error_message">Sorry, Real Time Information is currently unavailable for this bus stop</string>

    <string name="main_search_hint">Search here</string>

    <string name="near_search_button">Search this area</string>
    <string name="near_me_title">Near me</string>
    <string name="near_back">Back</string>

    <string name="search_stops_title">Stops</string>
    <string name="search_routes_title">Routes</string>
    <string name="search_recent_title">Recent</string>
    <string name="search_close_button">Close</string>
    <string name="search_reset_button">Reset</string>
    <string name="search_hint">Search here</string>
    <string name="search_route_item">Route %s</string>
    <string name="search_stop_item">Stop %s</string>

    <string name="expand_string">more</string>
    <string name="collapsed_string">less</string>


    <string name="favorite_message_empty_title">Nothing saved yet</string>
    <string name="favorite_message_empty">When you see something you like, tap on the heart to save.</string>

    <string name="timetables_title">Timetables %s</string>
    <string name="timetables_menu_title">Timetables</string>

</resources>
